Fix nav layout issue

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -397,7 +397,7 @@ input {
  column-gap: 1.25rem; /* 20px */
 }
 
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 720px) {
   .page-header__wrapper {
     grid-template-columns: 1fr 2fr;
   }
@@ -432,13 +432,13 @@ input {
   padding: 0;
 }
 
-@media screen and (max-width: 519px) {
+@media screen and (max-width: 719px) {
   .global-navigation {
     margin-top: .5rem;
   }
 }
 
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 720px) {
   .global-navigation {
     display: grid;
     gap: 1rem;
@@ -453,7 +453,7 @@ input {
   margin: 0;
 }
 
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 720px) {
   .global-navigation__item {
     display: inline-block;
     vertical-align: middle;
@@ -467,7 +467,7 @@ input {
   font-size: var(--font-size-main);
 }
 
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 720px) {
   .global-navigation__link {
     padding: 0 1.25rem;
     line-height: 1.875;
@@ -509,7 +509,7 @@ input {
   right: .625rem; 
 }
 
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 720px) {
   .hamburger {
     display: none;
   }
